fix: add word-wrap to post-item to prevent overflow

--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -186,6 +186,7 @@ article.post-item {
         margin: 0;
         padding-top: $spacing-full - 15;
         padding-bottom: $spacing-full - 15;
+        word-wrap: break-word;
     }
 
     ul.task-list {
